<resources
    xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">MensaX</string>

    <!-- TabListener strings -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <!-- Activity titles -->
    <string name="title_activity_detail">Meal Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_searchable">Search Results</string>
    <string name="title_activity_about">About the Mensa</string>
    <string name="title_activity_contact"> Contact Us</string>
    <string name="title_activity_live_cams">Live Cams</string>

    <!-- MensaXsync strings -->
    <string name="content_authority" translatable="false">edu.kit.psegruppe3.mensax</string>
    <string name="sync_account_type" translatable="false">mensax.kit.edu</string>

    <!-- SearchableActivity strings -->
    <string name="search_hint">Search for meals</string>
    <string name="no_results">No results found</string>

    <!-- OfferListAdapter strings -->
    <string name="l1" translatable="false">Linie 1</string>
    <string name="l2" translatable="false">Linie 2</string>
    <string name="l3" translatable="false">Linie 3</string>
    <string name="l45" translatable="false">Linie 4/5</string>
    <string name="schnitzelbar" translatable="false">Schnitzelbar</string>
    <string name="update" translatable="false">L6 Update</string>
    <string name="abend" translatable="false">Abend</string>
    <string name="aktion" translatable="false">Curry Queen</string>
    <string name="heisstheke" translatable="false">Cafeteria Heiße Theke</string>
    <string name="nmtisch" translatable="false">Cafeteria ab 14:30</string>

    <!-- Settings strings -->
    <string name="pref_category_title">General Settings</string>
    <string name="pref_priceGroup_label">Price Group</string>
    <string name="pref_priceGroup_key" translatable="false">price_group</string>
    <string name="pref_priceGroup_default" translatable="false">student</string>
    <string name="pref_priceGroup_label_students">Student</string>
    <string name="pref_priceGroup_label_guest">Guest</string>
    <string name="pref_priceGroup_label_staff">Staff</string>
    <string name="pref_priceGroup_label_pupil">Pupil</string>
    <string name="pref_priceGroup_student" translatable="false">student</string>
    <string name="pref_priceGroup_guest" translatable="false">guest</string>
    <string name="pref_priceGroup_staff" translatable="false">staff</string>
    <string name="pref_priceGroup_pupil" translatable="false">pupil</string>

    <!-- DetailFragment strings -->
    <string name="button_giveRating">Rate</string>
    <string name="button_foodMerge">Merge</string>
    <string name="button_takePicture">Upload photo</string>
    <string name="ingredients">Additives: <xliff:g id="add">%1$s</xliff:g></string>
    <string name="no_ingredients">Additives: none</string>
    <string name="global_rating">Average Rating:</string>
    <string name="user_rating">Your Rating:</string>
    <string name="tag_bio">controlled biological cultivation</string>
    <string name="tag_fish">marine stewardship council (msc) certified fish</string>
    <string name="tag_pork">contains pork</string>
    <string name="tag_cow">contains beef</string>
    <string name="tag_cow_aw">contains beef (species-appropriate husbandry)</string>
    <string name="tag_vegan">vegan dish</string>
    <string name="tag_veg">vegetarian dish (no meat added)</string>

    <!-- Give Rating in DetailFragment strings -->
    <string name="dialog_giveRating">Rate this meal</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="toast_rating_succesfull">Meal successfully rated</string>
    <string name="toast_rating_failed">Rating failed</string>

    <!-- Mearge meals in DetailFragment strings -->
    <string name="ok">OK</string>
    <string name="merge_dialog_title">Merge meals</string>
    <string name="merge_dialog_message">Please input the name of the second meal</string>
    <string name="toast_merge_succesfull">Merge proposal successfully sent to server</string>
    <string name="toast_merge_failed">Failed to send merge proposal</string>

    <!-- Error strings -->
    <string name="no_google_acc_dialog_title">No Google Account found</string>
    <string name="no_google_acc_dialog_message">A Google Account is required in order to use this function.</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_message">Failed to load meal data. Check your internet connection and try again.</string>
    <string name="error_dialog_message_livecams">The Live Cams website it currently down or your connection is missing. Please check your connection and try again later.</string>

    <!-- Upload Picture in DetailActivity strings -->
    <string name="uploaded">Successfully uploaded</string>
    <string name="toast_image_upload_succesfull">Photo upload successful</string>
    <string name="toast_image_upload_failed">Failed to upload photo</string>

    <!-- Menu action bar strings -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_legende">Infos</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_liveCam">Live Cams</string>

    <string name="dateFormat" translatable="false">(dd.MM)</string>

    <string name="price" translatable="false"><xliff:g id="price">%1$.2f</xliff:g> €</string>

    <string name="additives">(1) - with colorant\n(2) - with preserving agents\n(3) - with antioxidant agent\n(4) - with flavor enhancer\n(5) - with phosphate\n(6) - surface waxed\n(7) - with sulphur\n(8) - blackened olives\n(9) - with sweetener\n(10) - can be laxative if overused\n(11) - contains phenylalanine\n(12) - can contain alcohol\n(14) - pressed meat\n(15) - with chocolate glaze\n(27) - pressed fish\n\nGl - gluten\nNu - nuts\nEi - eggs\nEr - peanuts\nSo - soya\nSn - mustard\nKr - crustaceans\nFi - fish\nML - milk / lactose\nSe - celery\nSf - sulphite\nSa - sesame\nLu - lupin\nWe - molluscs</string>
    <string name="aboutMensa">Dining Hall\nIn our Am Adenauerring Dining Hall at KIT-Campus Süd we serve more than 9,000 lunches daily at eight different counters. Our staff prepares a variety of foods in two large kitchens at the highest hygienic standards.\nPastas, stir-fries, soups, side dishes and desserts (including vegetarian dishes) are always on the menu. Several times a year theme-specific weekly specials are part of our program. The popular schnitzel with chips and salad is available every day at our specially developed schnitzel bar, equipped with the most modern technology in the old dining hall.\nDuring the semester breaks you are well cared for, too. Due to lesser demand, we reduce our services within these periods, but for dinner you can always choose between three different hot meals with various side dishes, salads, and desserts. The various dishes are prepared here in front of our customers, or you could choose to eat at our salad buffet.\nThe dining hall at the Adenauerring is also open during lecture-free weeks.\n\nUpdate\nOstrich steaks, shrimp skewers, beef fillets – the daily changing menu at Update makes the mouths of lovers of fine cuisine water. In the front cooking area rump steak and exotic, fragrant wok dishes are cooked right before your eyes. Delicious side dishes, an extensive salad bar, and delicious desserts complete the Update experience. Our Update burger is available daily at the self-serve aisle with all imaginable ingredients.\nTo round up the service, our dishes can be enjoyed in a cozy atmosphere in our Vielmettersaal just off of our main dining hall. Rustic beech veneer tables and ergonomic chairs invite you to linger a while.\nAt Update, lunch is a culinary experience!\n\nCurry-Queen Am Adenauerring\nCurry Queen – World’s finest Currywurst (Curry sausage) is the first sausage diner to be awarded by the Restaurant and Hotel Guide Gault\u0026Millau. With headquarters in Hamburg, this guide helped Currywurst gain its deserved fame.\nCurry Queen brings, with the support of the Studierendenwerk Karlsruhe, awarded specialties to the Am Adenaurring Dining Hall and invites you to join us in very special culinary experience.\nSo enjoy the original Curry Queen veal sausage or the vegetarian sausage with the homemade Curry Queen ketchup and the original Belgian fries. Or, you can choose from four spices: Purple Curry (a mild, purple-colored curry with hibiscus flower), Anapurna (a strong, spicy curry - a classic), Curry Queen (very spicy with paprika); and for those who like it really hot: Curry Dragon with dried powdered raspberries and three different chilies.\nLet us take you on a sensual journey, inspired by culinary diversity and exotic spices from around the world.\n\nAm Adenauerring Cafeteria\nYou can start your day in Adenauerring 7 as early as 7.00 am. Our staff of the Am Adenauerring Cafeteria will serve you various types of coffee, tea, sandwiches, cakes, ice cream, fruit, yogurt and cold drinks continuously until 5 o’clock, or on Friday until 4 o’clock. You will also find a daily- changing menu of hot and cold snacks, such as meat and cheese rolls and stuffed puff pastries\n\nDinner at Am Adenauerring Dining Hall\nLast but not least, we offer you dinner from Monday to Thursday in our Am Adenaurring Cafeteria between 16:00 and 19.30. Warm dishes with various side dishes, salads and desserts are offered during this time.</string>
    <string name="mensaTimes">Lunch\nMo. - Fr. 11:00 - 14:00\nCurry-Queen\nMo. - Fr. 11:00 - 14:30\nFr. 11:00 - 14:00\nDinner at the Cafeteria Am Adenauerring\nMo. - Th. 16:00 - 19:30\n\nContact:\nAdenauerring 7, 76131 Karlsruhe\nPhone 0721 6909-230</string>
</resources>
