<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_legende"
        android:title="@string/action_legende"
        android:icon="@drawable/ic_info_outline_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_contact"
        android:title="@string/action_contact"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_liveCam"
        android:title="@string/action_liveCam"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
