<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFFFFFFF"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_meal_cow"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:text="@string/tag_cow"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_meal_cow_aw"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:text="@string/tag_cow_aw"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_meal_pork"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:text="@string/tag_pork"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_meal_veg"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:text="@string/tag_veg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_meal_vegan"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:text="@string/tag_vegan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_meal_fish"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:text="@string/tag_fish"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_meal_bio"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:text="@string/tag_bio"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/additives"/>

    </LinearLayout>
</ScrollView>