<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context="edu.kit.psegruppe3.mensax.DetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkGray">
            <Gallery
                android:id="@+id/gallery1"
                android:layout_width="match_parent"
                android:layout_height="240dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/mealName"
            android:paddingTop="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/first_tag_textview"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawablePadding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/second_tag_textview"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawablePadding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/showIngredients"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/mealGlobalRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:text="@string/global_rating"
            android:layout_marginBottom="10dp" />

        <RatingBar
            android:id="@+id/showGlobalRating"
            android:isIndicator="true"
            android:numStars="5"
            style = "?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"/>


        <TextView
            android:id="@+id/mealUserRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="16sp"
            android:textColor="@color/Black"
            android:text="@string/user_rating"
            android:layout_marginBottom="10dp"/>

        <RatingBar
            android:id="@+id/showUserRating"
            android:isIndicator="true"
            android:numStars="5"
            style = "?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"/>


        <Button
            android:id="@+id/button_giveRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:text="@string/button_giveRating"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"/>


        <Button
            android:id="@+id/button_takePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:text="@string/button_takePicture"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_mergeMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_foodMerge" />

    </LinearLayout>

</ScrollView>